gen/MiniLanguageParser.py
# Generated from C:/Users/asiaw/Desktop/PG/Genetic-Programming/src/main/antlr4/MiniLanguageParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniLanguageParser ( Parser ):

    grammarFileName = "MiniLanguageParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'.'", "'\"'", "'('", "')'", "'{'", 
                     "'}'", "'+'", "'-'", "'*'", "'/'", "'='", "';'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'if'", "'else'", 
                     "'while'", "'read'", "'write'", "'true'", "'false'", 
                     "'&&'", "'||'", "'int'", "'bool'", "'float'", "'string'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'!'" ]

    symbolicNames = [ "<INVALID>", "COMMA", "DOT", "QUOTE", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "PLUS", "MINUS", "TIMES", "DIV", 
                      "ASSIGN", "SEMI", "INTEGER_LITERAL", "FLOAT_LITERAL", 
                      "BOOL_LITERAL", "STRING_LITERAL", "KW_IF", "KW_ELSE", 
                      "KW_WHILE", "KW_READ", "KW_WRITE", "KW_TRUE", "KW_FALSE", 
                      "AND", "OR", "KW_INT", "KW_BOOL", "KW_FLOAT", "KW_STRING", 
                      "EQ", "NE", "LT", "GT", "LE", "GE", "NOT", "IDENTIFIER", 
                      "WS", "DIGIT", "LETTER" ]

    RULE_program = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_declStatement = 3
    RULE_declWithOptionalAssignment = 4
    RULE_assignmentStatement = 5
    RULE_ifStatement = 6
    RULE_loopStatement = 7
    RULE_read = 8
    RULE_write = 9
    RULE_primaryExpression = 10
    RULE_unaryExpression = 11
    RULE_multiplicativeExpression = 12
    RULE_additiveExpression = 13
    RULE_relationalExpression = 14
    RULE_equalityExpression = 15
    RULE_logicalAndExpression = 16
    RULE_logicalOrExpression = 17
    RULE_expression = 18
    RULE_relation = 19
    RULE_equalityRelation = 20
    RULE_unaryOperator = 21
    RULE_literal = 22
    RULE_identifier = 23
    RULE_typeSpecifier = 24

    ruleNames =  [ "program", "block", "statement", "declStatement", "declWithOptionalAssignment", 
                   "assignmentStatement", "ifStatement", "loopStatement", 
                   "read", "write", "primaryExpression", "unaryExpression", 
                   "multiplicativeExpression", "additiveExpression", "relationalExpression", 
                   "equalityExpression", "logicalAndExpression", "logicalOrExpression", 
                   "expression", "relation", "equalityRelation", "unaryOperator", 
                   "literal", "identifier", "typeSpecifier" ]

    EOF = Token.EOF
    COMMA=1
    DOT=2
    QUOTE=3
    LPAREN=4
    RPAREN=5
    LBRACE=6
    RBRACE=7
    PLUS=8
    MINUS=9
    TIMES=10
    DIV=11
    ASSIGN=12
    SEMI=13
    INTEGER_LITERAL=14
    FLOAT_LITERAL=15
    BOOL_LITERAL=16
    STRING_LITERAL=17
    KW_IF=18
    KW_ELSE=19
    KW_WHILE=20
    KW_READ=21
    KW_WRITE=22
    KW_TRUE=23
    KW_FALSE=24
    AND=25
    OR=26
    KW_INT=27
    KW_BOOL=28
    KW_FLOAT=29
    KW_STRING=30
    EQ=31
    NE=32
    LT=33
    GT=34
    LE=35
    GE=36
    NOT=37
    IDENTIFIER=38
    WS=39
    DIGIT=40
    LETTER=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniLanguageParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniLanguageParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniLanguageParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 276898775104) != 0):
                self.state = 50
                self.statement()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(MiniLanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MiniLanguageParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniLanguageParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniLanguageParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MiniLanguageParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(MiniLanguageParser.LBRACE)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 276898775104) != 0):
                self.state = 59
                self.statement()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(MiniLanguageParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(MiniLanguageParser.AssignmentStatementContext,0)


        def SEMI(self):
            return self.getToken(MiniLanguageParser.SEMI, 0)

        def declStatement(self):
            return self.getTypedRuleContext(MiniLanguageParser.DeclStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(MiniLanguageParser.LoopStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(MiniLanguageParser.IfStatementContext,0)


        def read(self):
            return self.getTypedRuleContext(MiniLanguageParser.ReadContext,0)


        def write(self):
            return self.getTypedRuleContext(MiniLanguageParser.WriteContext,0)


        def block(self):
            return self.getTypedRuleContext(MiniLanguageParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniLanguageParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniLanguageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.assignmentStatement()
                self.state = 68
                self.match(MiniLanguageParser.SEMI)
                pass
            elif token in [27, 28, 29, 30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.declStatement()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.loopStatement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.ifStatement()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 5)
                self.state = 73
                self.read()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.write()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 7)
                self.state = 75
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(MiniLanguageParser.TypeSpecifierContext,0)


        def declWithOptionalAssignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLanguageParser.DeclWithOptionalAssignmentContext)
            else:
                return self.getTypedRuleContext(MiniLanguageParser.DeclWithOptionalAssignmentContext,i)


        def SEMI(self):
            return self.getToken(MiniLanguageParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniLanguageParser.RULE_declStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclStatement" ):
                listener.enterDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclStatement" ):
                listener.exitDeclStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclStatement" ):
                return visitor.visitDeclStatement(self)
            else:
                return visitor.visitChildren(self)




    def declStatement(self):

        localctx = MiniLanguageParser.DeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.typeSpecifier()
            self.state = 79
            self.declWithOptionalAssignment()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==38:
                self.state = 80
                self.declWithOptionalAssignment()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(MiniLanguageParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclWithOptionalAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MiniLanguageParser.IdentifierContext,0)


        def ASSIGN(self):
            return self.getToken(MiniLanguageParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniLanguageParser.RULE_declWithOptionalAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclWithOptionalAssignment" ):
                listener.enterDeclWithOptionalAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclWithOptionalAssignment" ):
                listener.exitDeclWithOptionalAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclWithOptionalAssignment" ):
                return visitor.visitDeclWithOptionalAssignment(self)
            else:
                return visitor.visitChildren(self)




    def declWithOptionalAssignment(self):

        localctx = MiniLanguageParser.DeclWithOptionalAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declWithOptionalAssignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.identifier()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 89
                self.match(MiniLanguageParser.ASSIGN)
                self.state = 90
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MiniLanguageParser.IdentifierContext,0)


        def ASSIGN(self):
            return self.getToken(MiniLanguageParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniLanguageParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = MiniLanguageParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.identifier()
            self.state = 94
            self.match(MiniLanguageParser.ASSIGN)
            self.state = 95
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_IF(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLanguageParser.KW_IF)
            else:
                return self.getToken(MiniLanguageParser.KW_IF, i)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLanguageParser.LPAREN)
            else:
                return self.getToken(MiniLanguageParser.LPAREN, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLanguageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniLanguageParser.ExpressionContext,i)


        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLanguageParser.RPAREN)
            else:
                return self.getToken(MiniLanguageParser.RPAREN, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniLanguageParser.StatementContext,i)


        def KW_ELSE(self):
            return self.getToken(MiniLanguageParser.KW_ELSE, 0)

        def getRuleIndex(self):
            return MiniLanguageParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = MiniLanguageParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(MiniLanguageParser.KW_IF)
            self.state = 98
            self.match(MiniLanguageParser.LPAREN)
            self.state = 99
            self.expression()
            self.state = 100
            self.match(MiniLanguageParser.RPAREN)
            self.state = 101
            self.statement()
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 102
                    self.match(MiniLanguageParser.KW_IF)
                    self.state = 103
                    self.match(MiniLanguageParser.LPAREN)
                    self.state = 104
                    self.expression()
                    self.state = 105
                    self.match(MiniLanguageParser.RPAREN)
                    self.state = 106
                    self.statement() 
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 113
                self.match(MiniLanguageParser.KW_ELSE)
                self.state = 114
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_WHILE(self):
            return self.getToken(MiniLanguageParser.KW_WHILE, 0)

        def LPAREN(self):
            return self.getToken(MiniLanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniLanguageParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniLanguageParser.StatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(MiniLanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniLanguageParser.RULE_loopStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatement" ):
                listener.enterLoopStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatement" ):
                listener.exitLoopStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStatement" ):
                return visitor.visitLoopStatement(self)
            else:
                return visitor.visitChildren(self)




    def loopStatement(self):

        localctx = MiniLanguageParser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loopStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MiniLanguageParser.KW_WHILE)
            self.state = 118
            self.match(MiniLanguageParser.LPAREN)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 412317106960) != 0):
                self.state = 119
                self.expression()


            self.state = 122
            self.match(MiniLanguageParser.RPAREN)
            self.state = 123
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_READ(self):
            return self.getToken(MiniLanguageParser.KW_READ, 0)

        def LPAREN(self):
            return self.getToken(MiniLanguageParser.LPAREN, 0)

        def identifier(self):
            return self.getTypedRuleContext(MiniLanguageParser.IdentifierContext,0)


        def RPAREN(self):
            return self.getToken(MiniLanguageParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(MiniLanguageParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniLanguageParser.RULE_read

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)




    def read(self):

        localctx = MiniLanguageParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(MiniLanguageParser.KW_READ)
            self.state = 126
            self.match(MiniLanguageParser.LPAREN)
            self.state = 127
            self.identifier()
            self.state = 128
            self.match(MiniLanguageParser.RPAREN)
            self.state = 129
            self.match(MiniLanguageParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_WRITE(self):
            return self.getToken(MiniLanguageParser.KW_WRITE, 0)

        def LPAREN(self):
            return self.getToken(MiniLanguageParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLanguageParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniLanguageParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(MiniLanguageParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniLanguageParser.RULE_write

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)




    def write(self):

        localctx = MiniLanguageParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_write)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(MiniLanguageParser.KW_WRITE)
            self.state = 132
            self.match(MiniLanguageParser.LPAREN)
            self.state = 133
            self.expression()
            self.state = 134
            self.match(MiniLanguageParser.RPAREN)
            self.state = 135
            self.match(MiniLanguageParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(MiniLanguageParser.LiteralContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MiniLanguageParser.IdentifierContext,0)


        def LPAREN(self):
            return self.getToken(MiniLanguageParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLanguageParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniLanguageParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniLanguageParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpression" ):
                return visitor.visitPrimaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpression(self):

        localctx = MiniLanguageParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_primaryExpression)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 16, 17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.literal()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.identifier()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(MiniLanguageParser.LPAREN)
                self.state = 140
                self.expression()
                self.state = 141
                self.match(MiniLanguageParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryOperator(self):
            return self.getTypedRuleContext(MiniLanguageParser.UnaryOperatorContext,0)


        def unaryExpression(self):
            return self.getTypedRuleContext(MiniLanguageParser.UnaryExpressionContext,0)


        def primaryExpression(self):
            return self.getTypedRuleContext(MiniLanguageParser.PrimaryExpressionContext,0)


        def getRuleIndex(self):
            return MiniLanguageParser.RULE_unaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpression" ):
                listener.enterUnaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpression" ):
                listener.exitUnaryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpression" ):
                return visitor.visitUnaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def unaryExpression(self):

        localctx = MiniLanguageParser.UnaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_unaryExpression)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 37]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.unaryOperator()
                self.state = 146
                self.unaryExpression()
                pass
            elif token in [4, 14, 15, 16, 17, 38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.primaryExpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLanguageParser.UnaryExpressionContext)
            else:
                return self.getTypedRuleContext(MiniLanguageParser.UnaryExpressionContext,i)


        def TIMES(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLanguageParser.TIMES)
            else:
                return self.getToken(MiniLanguageParser.TIMES, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLanguageParser.DIV)
            else:
                return self.getToken(MiniLanguageParser.DIV, i)

        def getRuleIndex(self):
            return MiniLanguageParser.RULE_multiplicativeExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativeExpression" ):
                listener.enterMultiplicativeExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativeExpression" ):
                listener.exitMultiplicativeExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicativeExpression" ):
                return visitor.visitMultiplicativeExpression(self)
            else:
                return visitor.visitChildren(self)




    def multiplicativeExpression(self):
